[gd_scene load_steps=11 format=3 uid="uid://crgfbhd2rmc0y"]

[ext_resource type="Script" uid="uid://ebyeww5132mv" path="res://scripts/main_controller.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://b6jkxcov6trtp" path="res://scenes/world_map.tscn" id="2_world"]
[ext_resource type="PackedScene" uid="uid://n4lkstq04i51" path="res://scenes/port_interface.tscn" id="3_port"]
[ext_resource type="FontFile" uid="uid://d1qcor30kfluu" path="res://assets/IM_Fell_English/IMFellEnglish-Regular.ttf" id="3_tbgi4"]
[ext_resource type="Texture2D" uid="uid://d2g1an8x2qm75" path="res://assets/ui/ribbon.png" id="3_tipki"]
[ext_resource type="FontFile" uid="uid://bgdtpse7ydtaw" path="res://assets/Pirata_One/PirataOne-Regular.ttf" id="4_85g3d"]
[ext_resource type="PackedScene" uid="uid://c0pju5657ltuv" path="res://scenes/battle_view.tscn" id="4_battle"]
[ext_resource type="Script" uid="uid://cisq0xl6d6vfq" path="res://scripts/ui/vector_icon.gd" id="6_icon"]
[ext_resource type="Theme" uid="uid://d2i5mtbiap2py" path="res://resources/pixel_pirate.tres" id="theme_pirate"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_story"]
bg_color = Color(0, 0, 0, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Main" type="Node"]
script = ExtResource("1_main")

[node name="GameWorld" parent="." instance=ExtResource("2_world")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI"]
offset_left = 489.0
offset_top = -5.0
offset_right = 1044.0
offset_bottom = 122.0
texture = ExtResource("3_tipki")

[node name="Title" type="Label" parent="UI/TextureRect"]
layout_mode = 0
offset_left = 94.0
offset_top = 14.0
offset_right = 454.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.25, 0.15, 0.1, 1)
theme_override_fonts/font = ExtResource("4_85g3d")
theme_override_font_sizes/font_size = 55
text = "Unknown Waters"
horizontal_alignment = 1

[node name="Sidebar" type="Control" parent="UI"]
layout_mode = 3
anchor_right = 0.3
anchor_bottom = 1.0
offset_right = -101.0
grow_vertical = 2
theme = ExtResource("theme_pirate")

[node name="Border" type="Panel" parent="UI/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="UI/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBox" type="VBoxContainer" parent="UI/Sidebar/Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 32
text = "Captain's Log"
horizontal_alignment = 1

[node name="HSep" type="HSeparator" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2

[node name="GoldPanel" type="PanelContainer" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2

[node name="GoldRow" type="HBoxContainer" parent="UI/Sidebar/Margin/VBox/GoldPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GoldIcon" type="Control" parent="UI/Sidebar/Margin/VBox/GoldPanel/GoldRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("6_icon")
icon_type = 0

[node name="GoldVal" type="Label" parent="UI/Sidebar/Margin/VBox/GoldPanel/GoldRow"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 24
text = "1000"

[node name="CargoPanel" type="PanelContainer" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2

[node name="CargoRow" type="HBoxContainer" parent="UI/Sidebar/Margin/VBox/CargoPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CargoIcon" type="Control" parent="UI/Sidebar/Margin/VBox/CargoPanel/CargoRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("6_icon")
icon_type = 1

[node name="CargoVal" type="Label" parent="UI/Sidebar/Margin/VBox/CargoPanel/CargoRow"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 24
text = "0 / 50"

[node name="HullPanel" type="PanelContainer" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2

[node name="HullRow" type="HBoxContainer" parent="UI/Sidebar/Margin/VBox/HullPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HullIcon" type="Control" parent="UI/Sidebar/Margin/VBox/HullPanel/HullRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("6_icon")
icon_type = 2
color = Color(0.9, 0.4, 0.4, 1)

[node name="HullVal" type="Label" parent="UI/Sidebar/Margin/VBox/HullPanel/HullRow"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 24
text = "100 / 100"

[node name="HSep2" type="HSeparator" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2

[node name="LocPanel" type="PanelContainer" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2

[node name="LocRow" type="HBoxContainer" parent="UI/Sidebar/Margin/VBox/LocPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LocIcon" type="Control" parent="UI/Sidebar/Margin/VBox/LocPanel/LocRow"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("6_icon")
icon_type = 3
color = Color(0.4, 0.8, 0.4, 1)

[node name="LocationVal" type="Label" parent="UI/Sidebar/Margin/VBox/LocPanel/LocRow"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tbgi4")
theme_override_font_sizes/font_size = 24
text = "Alpha"

[node name="Spacer" type="Control" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="UI/Sidebar/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MenuBtn" type="Button" parent="UI/Sidebar/Margin/VBox/Buttons"]
layout_mode = 2
text = "MENU"

[node name="StoryBtn" type="Button" parent="UI/Sidebar/Margin/VBox/Buttons"]
layout_mode = 2
text = "STORY"

[node name="ExitBtn" type="Button" parent="UI/Sidebar/Margin/VBox/Buttons"]
layout_mode = 2
text = "EXIT"

[node name="PortInterface" parent="UI" instance=ExtResource("3_port")]
visible = false
offset_left = -101.0

[node name="BattleLayer" parent="UI" instance=ExtResource("4_battle")]
visible = false

[node name="ActionButton" type="Button" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -88.0
offset_right = -22.0
offset_bottom = -28.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("theme_pirate")
theme_override_colors/font_color = Color(0.9, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Set Sail"

[node name="Overlay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("theme_pirate")

[node name="StoryPanel" type="Panel" parent="UI/Overlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_story")

[node name="CloseBtn" type="Button" parent="UI/Overlay/StoryPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"

[node name="StoryText" type="Label" parent="UI/Overlay/StoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Story of the Evil Land

Long ago, the seas were peaceful. Then came the dark storms from the East. They say an ancient evil has awakened in the  land, corrupting the waters and bringing forth ghost ships.

You are cast away in these unknown waters. Navigate, trade, and survive."
autowrap_mode = 2

[node name="MessagePopup" type="Panel" parent="UI/Overlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/Overlay/MessagePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="UI/Overlay/MessagePopup/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.231373, 0.231373, 1)
theme_override_font_sizes/font_size = 24
text = "EVENT"
horizontal_alignment = 1

[node name="Msg" type="Label" parent="UI/Overlay/MessagePopup/VBox"]
layout_mode = 2
text = "Description of event."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="UI/Overlay/MessagePopup/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="OkBtn" type="Button" parent="UI/Overlay/MessagePopup/VBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "OK"
